--- a/work.html
+++ b/work.html
@@ -238,8 +238,27 @@
             header { flex-direction: column; align-items: stretch; }
             .header-actions { flex-wrap: wrap; }
             #taskInput { width: 100%; }
+            .board {
+                display: flex;
+                overflow-x: auto;
+                scroll-snap-type: x mandatory;
+                -webkit-overflow-scrolling: touch;
+                gap: 12px;
+                padding-bottom: 12px;
+            }
+            .column {
+                min-width: 280px;
+                max-width: 320px;
+                flex-shrink: 0;
+                scroll-snap-align: start;
+            }
+            .stats-bar { flex-wrap: wrap; gap: 12px; }
+            body { padding: 12px; }
+            h1 { font-size: 20px; }
         }
-        @media (max-width: 700px) { .board { grid-template-columns: 1fr; } }
+        @media (max-width: 700px) {
+            .column { min-width: 260px; }
+        }
     </style>
 </head>
 <body>
