--- a/work.html
+++ b/work.html
@@ -238,16 +238,19 @@
             .header-actions { flex-wrap: wrap; }
             #taskInput { width: 100%; }
             .board {
-                display: flex;
-                overflow-x: auto;
+                display: flex !important;
+                grid-template-columns: none !important;
+                flex-wrap: nowrap !important;
+                overflow-x: scroll !important;
                 scroll-snap-type: x mandatory;
                 -webkit-overflow-scrolling: touch;
+                touch-action: pan-x pan-y;
                 gap: 12px;
-                padding-bottom: 12px;
+                padding-bottom: 16px;
             }
             .column {
-                min-width: 300px;
-                max-width: 340px;
+                min-width: 72vw;
+                max-width: 72vw;
                 flex-shrink: 0;
                 scroll-snap-align: start;
             }
@@ -255,8 +258,8 @@
             body { padding: 12px; }
             h1 { font-size: 20px; }
         }
-        @media (max-width: 700px) {
-            .column { min-width: 260px; }
+        @media (max-width: 500px) {
+            .column { min-width: 85vw; max-width: 85vw; }
         }
     </style>
 </head>
