--- a/work.html
+++ b/work.html
@@ -278,6 +278,102 @@
         .task-meta { margin-top: 6px; font-size: 11px; color: #52525b; }
         .empty-state { text-align: center; padding: 30px 15px; color: #52525b; font-size: 13px; }
 
+        /* === FUEL GAUGE === */
+        .fuel-gauge {
+            display: flex;
+            align-items: center;
+            gap: 20px;
+            padding: 10px 16px;
+            background: linear-gradient(135deg, #18181b 0%, #1e1b2e 100%);
+            border-radius: 10px;
+            border: 1px solid #2d2a3e;
+            margin-bottom: 16px;
+            flex-wrap: wrap;
+        }
+        .fuel-item {
+            display: flex;
+            align-items: center;
+            gap: 8px;
+            flex: 1;
+            min-width: 180px;
+        }
+        .fuel-label {
+            font-size: 11px;
+            font-weight: 700;
+            color: var(--muted);
+            white-space: nowrap;
+            min-width: 62px;
+        }
+        .fuel-bar-wrap {
+            flex: 1;
+            height: 14px;
+            background: #27272a;
+            border-radius: 7px;
+            overflow: hidden;
+            position: relative;
+            min-width: 80px;
+        }
+        .fuel-bar-fill {
+            height: 100%;
+            border-radius: 7px;
+            transition: width 0.6s ease, background 0.4s ease;
+        }
+        .fuel-bar-fill.green { background: linear-gradient(90deg, #22c55e, #16a34a); }
+        .fuel-bar-fill.yellow { background: linear-gradient(90deg, #eab308, #ca8a04); }
+        .fuel-bar-fill.red { background: linear-gradient(90deg, #ef4444, #dc2626); }
+        .fuel-bar-fill.red-pulse {
+            background: linear-gradient(90deg, #ef4444, #dc2626);
+            animation: fuelPulse 1.5s ease-in-out infinite;
+        }
+        @keyframes fuelPulse {
+            0%, 100% { opacity: 1; }
+            50% { opacity: 0.6; }
+        }
+        .fuel-pct {
+            font-size: 13px;
+            font-weight: 800;
+            min-width: 36px;
+            text-align: right;
+        }
+        .fuel-pct.green { color: #4ade80; }
+        .fuel-pct.yellow { color: #facc15; }
+        .fuel-pct.red { color: #f87171; }
+        .fuel-reset {
+            font-size: 10px;
+            color: #52525b;
+            white-space: nowrap;
+        }
+        .fuel-model {
+            display: flex;
+            align-items: center;
+            gap: 6px;
+            font-size: 12px;
+            font-weight: 700;
+            white-space: nowrap;
+            padding: 4px 10px;
+            border-radius: 8px;
+        }
+        .fuel-model.ok {
+            color: #a78bfa;
+            background: rgba(139, 92, 246, 0.12);
+            border: 1px solid rgba(139, 92, 246, 0.25);
+        }
+        .fuel-model.fallback {
+            color: #fbbf24;
+            background: rgba(251, 191, 36, 0.12);
+            border: 1px solid rgba(251, 191, 36, 0.25);
+            animation: fuelPulse 2s ease-in-out infinite;
+        }
+        .fuel-updated {
+            font-size: 10px;
+            color: #3f3f46;
+            white-space: nowrap;
+        }
+        @media (max-width: 1200px) {
+            .fuel-gauge { gap: 10px; padding: 8px 12px; }
+            .fuel-item { min-width: 140px; }
+        }
+
         @media (max-width: 1200px) {
             header { flex-direction: column; align-items: stretch; }
             .header-actions { flex-wrap: wrap; }
@@ -338,6 +434,23 @@
             <div class="stat-item"><span class="stat-label">ChetGPT Active:</span><span class="stat-value" id="statActive">0</span></div>
             <div class="stat-item"><span class="stat-label">Done:</span><span class="stat-value" id="statDone">0</span></div>
             <div class="stat-item"><span class="stat-label">Total:</span><span class="stat-value" id="statTotal">0</span></div>
+        </div>
+
+        <div class="fuel-gauge" id="fuelGauge">
+            <div class="fuel-item">
+                <span class="fuel-label">🧠 Session</span>
+                <div class="fuel-bar-wrap"><div class="fuel-bar-fill" id="fuelSessionBar" style="width:0%"></div></div>
+                <span class="fuel-pct" id="fuelSessionPct">--%</span>
+                <span class="fuel-reset" id="fuelSessionReset"></span>
+            </div>
+            <div class="fuel-item">
+                <span class="fuel-label">📊 Weekly</span>
+                <div class="fuel-bar-wrap"><div class="fuel-bar-fill" id="fuelWeeklyBar" style="width:0%"></div></div>
+                <span class="fuel-pct" id="fuelWeeklyPct">--%</span>
+                <span class="fuel-reset" id="fuelWeeklyReset"></span>
+            </div>
+            <span class="fuel-model ok" id="fuelModel">🧠 --</span>
+            <span class="fuel-updated" id="fuelUpdated">⏱ --</span>
         </div>
 
         <div class="board">
@@ -808,6 +921,78 @@
                 return closest;
             }, { offset: Number.NEGATIVE_INFINITY }).element;
         }
+        // === FUEL GAUGE ===
+        (function() {
+            const FUEL_INTERVAL = 60000; // check every 60s
+
+            function fuelColor(pct) {
+                if (pct >= 85) return 'red-pulse';
+                if (pct >= 75) return 'red';
+                if (pct >= 50) return 'yellow';
+                return 'green';
+            }
+            function fuelTextColor(pct) {
+                if (pct >= 75) return 'red';
+                if (pct >= 50) return 'yellow';
+                return 'green';
+            }
+
+            function renderFuel(data) {
+                // Session bar
+                const sPct = data.session.pct || 0;
+                const sBar = document.getElementById('fuelSessionBar');
+                const sTxt = document.getElementById('fuelSessionPct');
+                const sReset = document.getElementById('fuelSessionReset');
+                sBar.style.width = sPct + '%';
+                sBar.className = 'fuel-bar-fill ' + fuelColor(sPct);
+                sTxt.textContent = sPct + '%';
+                sTxt.className = 'fuel-pct ' + fuelTextColor(sPct);
+                sReset.textContent = data.session.resetIn ? ('⏱ ' + data.session.resetIn) : '';
+
+                // Weekly bar
+                const wPct = data.weekly.pct || 0;
+                const wBar = document.getElementById('fuelWeeklyBar');
+                const wTxt = document.getElementById('fuelWeeklyPct');
+                const wReset = document.getElementById('fuelWeeklyReset');
+                wBar.style.width = wPct + '%';
+                wBar.className = 'fuel-bar-fill ' + fuelColor(wPct);
+                wTxt.textContent = wPct + '%';
+                wTxt.className = 'fuel-pct ' + fuelTextColor(wPct);
+                wReset.textContent = data.weekly.resetAt ? ('↻ ' + data.weekly.resetAt) : '';
+
+                // Model indicator
+                const modelEl = document.getElementById('fuelModel');
+                if (data.model.status === 'fallback') {
+                    modelEl.className = 'fuel-model fallback';
+                    modelEl.textContent = '⚠️ ' + (data.model.fallback || 'Codex');
+                } else {
+                    modelEl.className = 'fuel-model ok';
+                    modelEl.textContent = '🧠 ' + (data.model.active || 'Opus');
+                }
+
+                // Updated time
+                const upd = document.getElementById('fuelUpdated');
+                if (data.updatedAt) {
+                    const d = new Date(data.updatedAt);
+                    const timeStr = d.toLocaleTimeString('en-US', { hour: 'numeric', minute: '2-digit', hour12: true });
+                    upd.textContent = '⏱ ' + timeStr;
+                    upd.title = 'Last updated by ' + (data.updatedBy || 'ChetGPT');
+                }
+            }
+
+            async function fetchFuel() {
+                try {
+                    const res = await fetch('usage.json?_=' + Date.now(), { cache: 'no-store' });
+                    if (!res.ok) return;
+                    const data = await res.json();
+                    renderFuel(data);
+                } catch(e) { /* silent */ }
+            }
+
+            fetchFuel();
+            setInterval(fetchFuel, FUEL_INTERVAL);
+        })();
+
         // === LIVE UPDATE CHECKER ===
         (function() {
             const CHECK_INTERVAL = 30000; // 30 seconds
