--- a/work.html
+++ b/work.html
@@ -293,21 +293,22 @@
             border-radius: 34px;
             background: rgba(255, 255, 255, 0.95);
             border: 1px solid rgba(0, 0, 0, 0.06);
-            box-shadow: 0 2px 12px rgba(0, 0, 0, 0.08);
+            box-shadow: none;
             backdrop-filter: blur(16px);
+            overflow: hidden;
         }
 
         html[data-theme="dark"] .floating-action-bar {
             background: rgba(255, 255, 255, 0.10);
             border-color: rgba(255, 255, 255, 0.12);
-            box-shadow: 0 2px 16px rgba(0, 0, 0, 0.24);
+            box-shadow: none;
             backdrop-filter: blur(20px);
         }
 
         .fab-btn {
             width: 38px;
             height: 38px;
-            border: none;
+            border: 1px solid transparent;
             border-radius: 50%;
             background: transparent;
             color: var(--text-secondary);
@@ -316,7 +317,7 @@
             justify-content: center;
             cursor: pointer;
             padding: 0;
-            transition: transform 0.25s ease, color 0.25s ease, background 0.25s ease;
+            transition: transform 0.25s ease, color 0.25s ease, background 0.25s ease, border-color 0.25s ease;
         }
 
         .fab-btn svg {
@@ -337,12 +338,60 @@
 
         .fab-btn:focus-visible {
             outline: none;
-            box-shadow: 0 0 0 4px rgba(0, 151, 178, 0.18);
+            box-shadow: inset 0 0 0 2px rgba(0, 151, 178, 0.24);
         }
 
         .fab-btn.active {
             background: rgba(196, 150, 46, 0.15);
             color: var(--accent-amber);
+        }
+
+        .theme-toggle {
+            width: 52px;
+            height: 30px;
+            border-radius: 999px;
+            border-color: var(--btn-sync-border);
+            background: var(--btn-sync-bg);
+            position: relative;
+            overflow: hidden;
+        }
+
+        .theme-toggle:hover {
+            transform: none;
+            border-color: var(--border-strong);
+        }
+
+        .theme-toggle-track {
+            position: relative;
+            width: 100%;
+            height: 100%;
+            pointer-events: none;
+        }
+
+        .theme-toggle-knob {
+            position: absolute;
+            top: 2px;
+            left: 2px;
+            width: 24px;
+            height: 24px;
+            border-radius: 50%;
+            background: #FFFFFF;
+            border: 1px solid rgba(0, 0, 0, 0.10);
+            transition: transform 0.3s ease, background 0.3s ease, border-color 0.3s ease;
+        }
+
+        .theme-toggle.active .theme-toggle-knob {
+            transform: translateX(22px);
+        }
+
+        html[data-theme="dark"] .theme-toggle {
+            background: rgba(255, 255, 255, 0.14);
+            border-color: rgba(255, 255, 255, 0.20);
+        }
+
+        html[data-theme="dark"] .theme-toggle .theme-toggle-knob {
+            background: #E6ECFF;
+            border-color: rgba(0, 0, 0, 0.08);
         }
 
         #syncBtn.syncing {
@@ -550,12 +599,12 @@
             flex-wrap: wrap;
             gap: 8px;
             margin-bottom: 20px;
-            padding: 10px 16px;
+            padding: 8px 14px;
             border-radius: 780px;
-            background: var(--panel-bg);
+            background: var(--glass-faint);
             border: 1px solid var(--panel-border);
-            backdrop-filter: blur(24px);
-            box-shadow: var(--shadow-panel);
+            backdrop-filter: blur(16px);
+            box-shadow: none;
         }
 
         .filter-label {
@@ -1195,6 +1244,17 @@
             <div class="stat-item"><span class="stat-label">Total</span><span class="stat-value" id="statTotal">0</span></div>
         </div>
 
+        <div class="filter-bar" id="filterBar">
+            <span class="filter-label">Filter</span>
+            <button class="filter-pill active" data-filter="all">All</button>
+            <button class="filter-pill" data-filter="MIS">MIS</button>
+            <button class="filter-pill" data-filter="setup">Setup</button>
+            <button class="filter-pill" data-filter="scraping">Scraping</button>
+            <button class="filter-pill" data-filter="research">Research</button>
+            <button class="filter-pill" data-filter="infra">Infra</button>
+            <span class="page-loaded" id="pageLoaded">Loaded: --</span>
+        </div>
+
         <div class="fuel-gauge" id="fuelGauge">
             <div class="fuel-item">
                 <span class="fuel-label">Session</span>
@@ -1217,17 +1277,6 @@
                 <span class="thinking-active" id="thinkActive"></span>
             </div>
             <span class="fuel-updated" id="fuelUpdated">--</span>
-        </div>
-
-        <div class="filter-bar" id="filterBar">
-            <span class="filter-label">Filter</span>
-            <button class="filter-pill active" data-filter="all">All</button>
-            <button class="filter-pill" data-filter="MIS">MIS</button>
-            <button class="filter-pill" data-filter="setup">Setup</button>
-            <button class="filter-pill" data-filter="scraping">Scraping</button>
-            <button class="filter-pill" data-filter="research">Research</button>
-            <button class="filter-pill" data-filter="infra">Infra</button>
-            <span class="page-loaded" id="pageLoaded">Loaded: --</span>
         </div>
 
         <div class="changelog-wrap" id="changelogWrap" style="display:none;">
@@ -1285,8 +1334,8 @@
     </div>
 
     <div class="floating-action-bar" id="floatingActionBar" role="toolbar" aria-label="Board actions">
-        <button class="fab-btn" id="themeToggle" type="button" aria-label="Switch to dark mode" aria-pressed="false" title="Toggle theme">
-            <svg viewBox="0 0 24 24" aria-hidden="true"><path d="M20.5 14.5A8.5 8.5 0 1 1 9.5 3.5a7 7 0 1 0 11 11z"/></svg>
+        <button class="fab-btn theme-toggle" id="themeToggle" type="button" role="switch" aria-label="Switch to dark mode" aria-checked="false" aria-pressed="false" title="Toggle theme">
+            <span class="theme-toggle-track" aria-hidden="true"><span class="theme-toggle-knob"></span></span>
         </button>
         <button class="fab-btn" id="syncBtn" type="button" aria-label="Sync board" title="Sync board">
             <svg viewBox="0 0 24 24" aria-hidden="true"><path d="M3 12a9 9 0 0 1 15.36-6.36"/><path d="M21 12a9 9 0 0 1-15.36 6.36"/><path d="M18 2v4h-4"/><path d="M6 22v-4h4"/></svg>
@@ -1421,11 +1470,9 @@
             if (toggle) {
                 toggle.classList.toggle('active', dark);
                 toggle.setAttribute('aria-pressed', String(dark));
+                toggle.setAttribute('aria-checked', String(dark));
                 toggle.setAttribute('aria-label', dark ? 'Switch to light mode' : 'Switch to dark mode');
                 toggle.setAttribute('title', dark ? 'Switch to light mode' : 'Switch to dark mode');
-                toggle.innerHTML = dark
-                    ? '<svg viewBox="0 0 24 24" aria-hidden="true"><circle cx="12" cy="12" r="4"/><path d="M12 2v3"/><path d="M12 19v3"/><path d="M4.93 4.93l2.12 2.12"/><path d="M16.95 16.95l2.12 2.12"/><path d="M2 12h3"/><path d="M19 12h3"/><path d="M4.93 19.07l2.12-2.12"/><path d="M16.95 7.05l2.12-2.12"/></svg>'
-                    : '<svg viewBox="0 0 24 24" aria-hidden="true"><path d="M20.5 14.5A8.5 8.5 0 1 1 9.5 3.5a7 7 0 1 0 11 11z"/></svg>';
             }
         }
 
